--- a/main.html
+++ b/main.html
@@ -8,6 +8,26 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>My Plalist</h2>
+	<ul>
+		<li><a target="_blank">Song 1</a></li>
+		<li><a target="_blank">Song 2</a></li>
+		<li><a target="_blank">Song 3</a></li>
+		<li><a target="_blank">Song 4</a></li>
+		<li><a target="_blank">Song 5</a></li>
+	</ul>
+	<h2>Now Playing...</h2>
+	<div>
+		<video controls>
+			<source src="https://www.w3schools.com/tags/movie.mp4">
+		</video>
+		<h2>MP3 songs</h2>
+		<label>Maan Meri Jaan</label>
+		<audio controls>
+			<source src="https://www.pagalworld.com.se/files/download/id/64630">
+		</audio>
+	</div>
+	<h2></h2>
     <script type="text/javascript" src="./script.js">
 </script>
 
