--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>My Plalist</h1>
+	<h1>My Playlist</h1>
 	<ul>
 		<li><a target="_blank">Song 1</a></li>
 		<li><a target="_blank">Song 2</a></li>
