--- a/main.html
+++ b/main.html
@@ -18,12 +18,12 @@
 	</ul>
 	<h2>Now Playing...</h2>
 	<div>
-		<video class=".player_one" controls>
+		<video class="player_one" controls>
 			<source type="video" src="https://www.w3schools.com/tags/movie.mp4">
 		</video>
 		<h2>MP3 songs</h2>
 		<label>Maan Meri Jaan</label>
-		<audio class=".player_two" controls>
+		<audio class="player_two" controls>
 			<source type="audio" src="https://www.pagalworld.com.se/files/download/id/64630">
 		</audio>
 	</div>
